--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -5,7 +5,7 @@ clusterGroup:
     - open-cluster-management
     - vault
     - golang-external-secrets
-    - hello-world
+  #  - hello-world
   #  - config-demo
   subscriptions:
     acm:
@@ -15,7 +15,7 @@ clusterGroup:
       #csv: advanced-cluster-management.v2.6.1
   projects:
     - hub
-    - hello-world
+   # - hello-world
    # - config-demo
   # Explicitly mention the cluster-state based overrides we plan to use for this pattern.
   # We can use self-referential variables because the chart calls the tpl function with these variables defined
@@ -63,24 +63,24 @@ clusterGroup:
   #    namespace: config-demo
   #    project: config-demo
   #    path: charts/all/config-demo
-    hello-world:
-      name: hello-world
-      namespace: hello-world
-      project: hello-world
-      path: charts/all/hello-world
-  imperative:
+  #  hello-world:
+  #    name: hello-world
+  #    namespace: hello-world
+  #    project: hello-world
+  #    path: charts/all/hello-world
+#  imperative:
     # NOTE: We *must* use lists and not hashes. As hashes lose ordering once parsed by helm
     # The default schedule is every 10 minutes: imperative.schedule
     # Total timeout of all jobs is 1h: imperative.activeDeadlineSeconds
     # imagePullPolicy is set to always: imperative.imagePullPolicy
     # For additional overrides that apply to the jobs, please refer to
     # https://hybrid-cloud-patterns.io/imperative-actions/#additional-job-customizations
-    jobs:
-      - name: hello-world
+#    jobs:
+#      - name: hello-world
         # ansible playbook to be run
-        playbook: common/ansible/playbooks/hello-world/hello-world.yaml
+#        playbook: common/ansible/playbooks/hello-world/hello-world.yaml
         # per playbook timeout in seconds
-        timeout: 234
+#        timeout: 234
         # verbosity: "-v"
   managedClusterGroups:
     exampleRegion:
